GNOME Bugzilla – Bug 684693
GLib criticals during suspend/resume
Last modified: 2012-10-08 08:44:26 UTC
Reported by Ben Chan in the mailing list: https://mail.gnome.org/archives/networkmanager-list/2012-September/msg00218.html While running suspend/resume stress tests on various modems, MM gives a few glib assertion warnings. (ModemManager:648): GLib-GIO-CRITICAL **: g_dbus_connection_emit_signal: assertion `G_IS_DBUS_CONNECTION (connection)' failed (ModemManager:648): GLib-GObject-CRITICAL **: g_object_ref: assertion `G_IS_OBJECT (object)' failed (ModemManager:648): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed Backtraces: GLib-GIO-CRITICAL **: g_dbus_connection_emit_signal: assertion `G_IS_DBUS_CONNECTION (connection)' failed
+ Trace 230896
I've fixed the issue triggering the last two criticals, fix is in git master now. For the first critical, I've filled a new bug 685699 in glib/gdbus, as it may be an issue there. Will set this bug as fixed, and follow up in the new one if additional changes are needed in ModemManager.